# controltower

./: .gitignore  README.md  RESUME_FROM_HERE.md  controltower.env.example  controltower.example.yaml  pyproject.toml  run_controltower.py  run_controltower_ui.py
.tmp/: controltower.livecheck.yaml
.tmp_export_out/: command_brief.json  engine_snapshot.json  exploration.json  intelligence_bundle.json  manifest.json
.tmp_validation_run/: schedule.csv
build_control/: 00_MASTER_PLAN.md  01_PRODUCT_DEFINITION.md  02_BUILD_MANIFEST.md  03_ACCEPTANCE_CRITERIA.md  04_DECISION_LOG.md  05_CONTINUITY_PROTOCOL.md  06_STATUS_BOARD.md  07_ASTA_CSV_COLUMN_MAPPING.md  08_PHASE2C_VALIDATION_EVIDENCE.md  09_CURRENT_BUILD_PACKET.md  10_PHASE32_UPLOAD_RUN_PUBLISH_WIRING_CLOSEOUT.md  11_TRUSTED_EGRESS_LIVE_VERIFICATION_RUNBOOK.md  12_TARGET_PRODUCTION_ARCHITECTURE.md  13_POST_PHASE32_PLATFORM_ROADMAP.md  state.json
config/: project_registry.example.yaml  project_registry.yaml
docs/: CONFIGURATION.md  CONFIG_REFERENCE.md  CONTROL_TOWER_MASTER_PLAN.md  CURSOR_PROMPT_APPENDIX.md  N8N_EXECUTION_INTEGRATION.md  OPERATIONS_RUNBOOK.md  PHASE32_VALIDATION_REPORT.md  PRODUCTION_RELEASE.md  REAL_PROJECT_VALIDATION_RUNBOOK.md  REAL_PROJECT_VALIDATION_SESSION_TEMPLATE.md  REVIEW_APPROVAL_RUNBOOK.md  RUNBOOK_WEEKLY.md  SETUP.md  SOURCE_ARTIFACTS.md  TROUBLESHOOTING.md  VAULT_STRUCTURE.md
scripts/: _controltower_ops_common.py  deploy_update_controltower.py  diagnostics_snapshot_controltower.py  inspect_tls_route.py  preflight_controltower.py  release_controltower.ps1  release_controltower.py  (+12 more)
(+238 files in other folders)
